Updated to master 2.
Ported the tests to ElasticSearchIntegrationTests
Removed duplicate update code, with UpdateHelper (which get used via bulk api logic)

Conflicts:
	src/main/java/org/elasticsearch/action/updatebyquery/IndexUpdateByQueryRequest.java
	src/main/java/org/elasticsearch/action/updatebyquery/TransportShardUpdateByQueryAction.java
	src/main/java/org/elasticsearch/action/updatebyquery/TransportUpdateByQueryAction.java
	src/main/java/org/elasticsearch/rest/action/updatebyquery/RestUpdateByQueryAction.java
	src/test/java/org/elasticsearch/test/client/RandomizingClient.java
	src/test/java/org/elasticsearch/test/integration/updatebyquery/UpdateByQueryTests.java

Committer (@ofavre):
  I chose to keep most of the TransportShardUpdateByQueryAction intact
  to keep the added fields, until they are available within UpdateHelper.